--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Ohmyfood!</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Ohmyfood</h1>
+      <p>Bonjours</p>
+    </header>
     <main>
       <div></div>
       <nav></nav>
