--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Ohmyfood!</title>
   </head>
   <body>
-    <header>
-      <h1>Ohmyfood</h1>
-      <p>Bonjours</p>
-    </header>
-    <main>
-      <div></div>
-      <nav></nav>
-      <section></section>
-      <footer></footer>
-    </main>
+    <div id="file">
+      <header>
+        <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
+      </header>
+      <main>
+        <div></div>
+        <nav></nav>
+        <section></section>
+        <footer></footer>
+      </main>
+    </div>
   </body>
 </html>
