--- a/index.html
+++ b/index.html
@@ -40,9 +40,28 @@
             <button class="pres__btn">Explorer nos restaurants</button>
           </div>
         </div>
-        <!-- Menu -->
-        <nav></nav>
+        <!-- Filters -->
+        <section id="opération">
+          <h1 class="opération__heading">Fonctionnement</h1>
+          <div class="Filters">
+            <div class="Filters__numbers"><span>1</span></div>
+            <i class="fas fa-mobile-alt"></i>
+            <p>Choisissez un restaurant</p>
+          </div>
+          <div class="Filters">
+            <div class="Filters__numbers"><span>2</span></div>
+            <i class="fas fa-list-ul"></i>
+            <p>Composez votre menu</p>
+          </div>
+          <div class="Filters">
+            <div class="Filters__numbers"><span>3</span></div>
+            <i class="fas fa-store"></i>
+            <p>Dégustez au restaurant</p>
+          </div>
+        </section>
+        <!---->
         <section></section>
+        <!---->
         <footer></footer>
       </main>
     </div>
