--- a/index.html
+++ b/index.html
@@ -59,8 +59,62 @@
             <p>Dégustez au restaurant</p>
           </div>
         </section>
-        <!---->
-        <section></section>
+        <!-- Menu -->
+        <section id="menu">
+          <h1>Restaurants</h1>
+          <article>
+            <a href="#">
+              <img
+                src="images/restaurants/jay-wennington.jpg"
+                alt=" une assiette avec de la garniture et des mains à droite"
+              />
+              <div>
+                <h2>La palette du goût</h2>
+                <p>Ménilmontant</p>
+              </div>
+              <div></div>
+            </a>
+          </article>
+          <article>
+            <a href="#">
+              <img
+                src="images/restaurants/stil.jpg"
+                alt="une assiette au centre remplit de garniture "
+              />
+              <div>
+                <h2>La note enchantée</h2>
+                <p>Charonne</p>
+              </div>
+              <div></div>
+            </a>
+          </article>
+          <article>
+            <a href="#">
+              <img
+                src="images/restaurants/toa-heftiba.jpg"
+                alt="vue de face une une assiette avec un plat"
+              />
+              <div>
+                <h2>A la française</h2>
+                <p>Cité Rouge</p>
+              </div>
+              <div></div>
+            </a>
+          </article>
+          <article>
+            <a href="#">
+              <img
+                src="images/restaurants/louis-hansel.jpg"
+                alt="vue de face une assiette avec un plat"
+              />
+              <div>
+                <h2>Le délice des sens</h2>
+                <p>Folie-Méricourt</p>
+              </div>
+              <div></div>
+            </a>
+          </article>
+        </section>
         <!---->
         <footer></footer>
       </main>
