--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <h2>La palette du goût</h2>
                 <p>Ménilmontant</p>
               </div>
-              <div></div>
+              <div><i class="far fa-heart"></i></div>
+              <div class="article__new">Nouveau</div>
             </a>
           </article>
           <article>
@@ -85,7 +86,8 @@
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
               </div>
-              <div></div>
+              <div><i class="far fa-heart"></i></div>
+              <div class="article__new">Nouveau</div>
             </a>
           </article>
           <article>
@@ -98,7 +100,8 @@
                 <h2>A la française</h2>
                 <p>Cité Rouge</p>
               </div>
-              <div></div>
+              <div><i class="far fa-heart"></i></div>
+              <div class="article__new">Nouveau</div>
             </a>
           </article>
           <article>
@@ -111,7 +114,8 @@
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
               </div>
-              <div></div>
+              <div><i class="far fa-heart"></i></div>
+              <div class="article__new">Nouveau</div>
             </a>
           </article>
         </section>
