--- a/index.html
+++ b/index.html
@@ -119,8 +119,14 @@
             </a>
           </article>
         </section>
-        <!---->
-        <footer></footer>
+        <!--contact-->
+        <footer>
+          <h3>Ohmyfood</h3>
+          <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+          <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+          <p>Mentions légales</p>
+          <p>Contact</p>
+        </footer>
       </main>
     </div>
   </body>
