--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
             </form>
           </div>
           <div class="pres">
-            <h1 class="pres__heading">
-              Réserver le menu qui<br />vous convient
-            </h1>
+            <p class="pres__heading">Réserver le menu qui vous convient</p>
             <p class="pres__explication">
-              Découvrer des restaurants d'exception,<br />
-              séléctionnés par nos soins.
+              Découvrer des restaurants d'exception, séléctionnés par nos soins.
             </p>
             <button class="pres__btn">Explorer nos restaurants</button>
           </div>
@@ -68,13 +65,13 @@
                 src="images/restaurants/jay-wennington.jpg"
                 alt=" une assiette avec de la garniture et des mains à droite"
               />
-              <div>
+              <div class="menu--new">Nouveau</div>
+              <div class="title__§">
                 <h2>La palette du goût</h2>
                 <p>Ménilmontant</p>
               </div>
-              <div><i class="far fa-heart"></i></div>
-              <div class="article__new">Nouveau</div>
             </a>
+            <button><i class="far fa-heart"></i></button>
           </article>
           <article>
             <a href="#">
@@ -82,13 +79,13 @@
                 src="images/restaurants/stil.jpg"
                 alt="une assiette au centre remplit de garniture "
               />
-              <div>
+              <div class="menu--new">Nouveau</div>
+              <div class="title__§">
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
               </div>
-              <div><i class="far fa-heart"></i></div>
-              <div class="article__new">Nouveau</div>
             </a>
+            <button><i class="far fa-heart"></i></button>
           </article>
           <article>
             <a href="#">
@@ -96,13 +93,12 @@
                 src="images/restaurants/toa-heftiba.jpg"
                 alt="vue de face une une assiette avec un plat"
               />
-              <div>
-                <h2>A la française</h2>
+              <div class="title__§">
+                <h2>À la française</h2>
                 <p>Cité Rouge</p>
               </div>
-              <div><i class="far fa-heart"></i></div>
-              <div class="article__new">Nouveau</div>
             </a>
+            <button><i class="far fa-heart"></i></button>
           </article>
           <article>
             <a href="#">
@@ -110,24 +106,27 @@
                 src="images/restaurants/louis-hansel.jpg"
                 alt="vue de face une assiette avec un plat"
               />
-              <div>
+              <div class="title__§">
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
               </div>
-              <div><i class="far fa-heart"></i></div>
-              <div class="article__new">Nouveau</div>
             </a>
+            <button><i class="far fa-heart"></i></button>
           </article>
         </section>
-        <!--contact-->
-        <footer>
-          <h3>Ohmyfood</h3>
-          <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-          <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-          <p>Mentions légales</p>
-          <p>Contact</p>
-        </footer>
       </main>
+      <!--contact-->
+      <footer>
+        <h3>Ohmyfood</h3>
+        <p class="footer--bold">
+          <i class="fas fa-utensils"></i>Proposer un restaurant
+        </p>
+        <p class="footer--bold">
+          <i class="fas fa-hands-helping"></i>Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+      </footer>
     </div>
   </body>
 </html>
