--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/710925a4e7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>A la francaise</title>
   </head>
   <body></body>
