--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style3.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -125,7 +126,7 @@
           <i class="fas fa-hands-helping"></i>Devenir partenaire
         </p>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
       </footer>
     </div>
   </body>
