--- a/index2.html
+++ b/index2.html
@@ -2,13 +2,40 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style3.css" />
+    <link rel="stylesheet" href="index.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/710925a4e7.js"
       crossorigin="anonymous"
     ></script>
-    <title>A la francaise</title>
+    <title>À la francaise</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <!--Header-->
+      <header>
+        <button>
+          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </button>
+        <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
+      </header>
+      <!--Picture-->
+      <div id="picture">
+        <img
+          src="images/restaurants/toa-heftiba.jpg"
+          alt="vue de face une une assiette avec un plat"
+        />
+      </div>
+      <!--Menu-->
+      <section>
+        <div id="title__heart">
+          <h1>À la francaise</h1>
+          <button><i class="far fa-heart"></i></button>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
