--- a/index4.html
+++ b/index4.html
@@ -2,6 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style3.css" />
+    <link rel="stylesheet" href="index.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -10,5 +13,13 @@
     ></script>
     <title>La palette du goût</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <!--Header-->
+      <header>
+        <button><i class="fas fa-arrow-left"></i></button>
+        <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
+      </header>
+    </div>
+  </body>
 </html>
