Add Menus section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="menu">
           <h1>Restaurants</h1>
           <article>
-            <a href="#">
+            <a href="index4.html">
               <img
                 src="images/restaurants/jay-wennington.jpg"
                 alt=" une assiette avec de la garniture et des mains à droite"
@@ -75,7 +75,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="#">
+            <a href="index3.html">
               <img
                 src="images/restaurants/stil.jpg"
                 alt="une assiette au centre remplit de garniture "
@@ -89,7 +89,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="#">
+            <a href="index2.html">
               <img
                 src="images/restaurants/toa-heftiba.jpg"
                 alt="vue de face une une assiette avec un plat"
@@ -102,7 +102,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="#">
+            <a href="index5.html">
               <img
                 src="images/restaurants/louis-hansel.jpg"
                 alt="vue de face une assiette avec un plat"
