--- a/index2.html
+++ b/index2.html
@@ -23,19 +23,97 @@
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
-      <div id="picture">
-        <img
-          src="images/restaurants/toa-heftiba.jpg"
-          alt="vue de face une une assiette avec un plat"
-        />
-      </div>
-      <!--Menu-->
-      <section>
-        <div id="title__heart">
-          <h1>À la francaise</h1>
-          <button><i class="far fa-heart"></i></button>
+      <main>
+        <div id="picture">
+          <img
+            src="images/restaurants/toa-heftiba.jpg"
+            alt="vue de face une une assiette avec un plat"
+          />
         </div>
-      </section>
+        <!--Menu-->
+        <section>
+          <div id="title__heart">
+            <h1>À la francaise</h1>
+            <button><i class="far fa-heart"></i></button>
+          </div>
+          <article>
+            <h2>ENTRÉER</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Tartare de poulpe acidulé</h3>
+                <p>Aux zests d'orange</p>
+              </div>
+              <div class="menu__price"><em>25€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Velouté de légumes d'antan</h3>
+                <p>Carotte, panais, topinabour</p>
+              </div>
+              <div class="menu__price"><em>35€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Soupe à l'oignon</h3>
+                <p>Revisitée</p>
+              </div>
+              <div class="menu__price"><em>20€</em></div>
+            </div>
+          </article>
+          <article>
+            <h2>PLATS</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Coquilles Saint-Jacques</h3>
+                <p>Accompagnées d'une purée de panais</p>
+              </div>
+              <div class="menu__price"><em>40€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Magret de canard</h3>
+                <p>Et parmentier de pomme de terres</p>
+              </div>
+              <div class="menu__price"><em>35€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Pigeonneau d'Ille-Vilaine</h3>
+                <p>Sur sont lit de gnocchis aux légumes</p>
+              </div>
+              <div class="menu__price"><em>44€</em></div>
+            </div>
+          </article>
+          <article>
+            <h2>DESSERT</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Pétales de violettes glacés</h3>
+                <p>Et purée de noisettes</p>
+              </div>
+              <div class="menu__price"><em>18€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Fondant au chocolat</h3>
+                <p>Revisité</p>
+              </div>
+              <div class="menu__price"><em>22€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3>Millefeuille croustillant</h3>
+                <p>Myrtilles et pâte d'amande</p>
+              </div>
+              <div class="menu__price"><em>23€</em></div>
+            </div>
+          </article>
+          <div id="btn"><button>Commander</button></div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
