Add menu La note enchantée

--- a/index3.html
+++ b/index3.html
@@ -17,9 +17,146 @@
     <div>
       <!--Header-->
       <header>
-        <button><i class="fas fa-arrow-left"></i></button>
+        <button>
+          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </button>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
+      <!--Picture-->
+      <main>
+        <div id="picture">
+          <img
+            src="images/restaurants/stil.jpg"
+            alt="une assiette au centre remplit de garniture"
+          />
+        </div>
+        <!--Menu-->
+        <section>
+          <div id="title__heart">
+            <h1 class="title--size">La note enchantée</h1>
+            <button class="heart--size"><i class="far fa-heart"></i></button>
+          </div>
+          <article class="article--size">
+            <h2>ENTRÉES</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Ravioles de foie gras</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Accompagnés de leur crème à la truffe
+                </p>
+              </div>
+              <div class="menu__price"><em>25€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Caviar Osciètre</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Sur blini à la farine de blé noir
+                </p>
+              </div>
+              <div class="menu__price"><em>35€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Homard et espuma de...</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Mariné aux zests d'orange
+                </p>
+              </div>
+              <div class="menu__price"><em>20€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">
+                  Foie gras de canard cuit entier
+                </h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Confiture de figue et pain toasté
+                </p>
+              </div>
+              <div class="menu__price"><em>35€</em></div>
+            </div>
+          </article>
+          <article>
+            <h2>PLATS</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">
+                  Noix de coquilles Saint-Jacques
+                </h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Sur lit de purée de céleri-rave
+                </p>
+              </div>
+              <div class="menu__price"><em>40€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Langoustine poêlée</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Purée de patate douce
+                </p>
+              </div>
+              <div class="menu__price"><em>35€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Mijoté de queue de boeuf</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Et riz sauvage aux zests de citron
+                </p>
+              </div>
+              <div class="menu__price"><em>44€</em></div>
+            </div>
+          </article>
+          <article>
+            <h2>DESSERT</h2>
+            <div class="lin--tertiary"></div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">
+                  Macaron noisette et chocolat
+                </h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+              </div>
+              <div class="menu__price"><em>18€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">baba au rhum revisité</h3>
+                <p class="menu__title§__§ menu__§--size">
+                  Avec son coulis de citron
+                </p>
+              </div>
+              <div class="menu__price"><em>22€</em></div>
+            </div>
+            <div class="menu">
+              <div class="menu__title§">
+                <h3 class="menu__title§__T--size">Tarte au citron meringuée</h3>
+                <p class="menu__title§__§ menu__§--size">Destructurée</p>
+              </div>
+              <div class="menu__price"><em>23€</em></div>
+            </div>
+          </article>
+          <div class="btn" class="btn--height"><button>Commander</button></div>
+        </section>
+      </main>
+      <!--contact-->
+      <footer>
+        <h4>Ohmyfood</h4>
+        <p class="footer--bold">
+          <i class="fas fa-utensils"></i>Proposer un restaurant
+        </p>
+        <p class="footer--bold">
+          <i class="fas fa-hands-helping"></i>Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+      </footer>
     </div>
   </body>
 </html>
