--- a/index2.html
+++ b/index2.html
@@ -37,26 +37,26 @@
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
-            <h2>ENTRÉER</h2>
+            <h2>ENTRÉES</h2>
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Tartare de poulpe acidulé</h3>
-                <p>Aux zests d'orange</p>
+                <p class="menu__title§__§">Aux zests d'orange</p>
               </div>
               <div class="menu__price"><em>25€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Velouté de légumes d'antan</h3>
-                <p>Carotte, panais, topinabour</p>
+                <p class="menu__title§__§">Carotte, panais, topinabour</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Soupe à l'oignon</h3>
-                <p>Revisitée</p>
+                <p class="menu__title§__§">Revisitée</p>
               </div>
               <div class="menu__price"><em>20€</em></div>
             </div>
@@ -67,21 +67,25 @@
             <div class="menu">
               <div class="menu__title§">
                 <h3>Coquilles Saint-Jacques</h3>
-                <p>Accompagnées d'une purée de panais</p>
+                <p class="menu__title§__§">
+                  Accompagnées d'une purée de panais
+                </p>
               </div>
               <div class="menu__price"><em>40€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Magret de canard</h3>
-                <p>Et parmentier de pomme de terres</p>
+                <p class="menu__title§__§">Et parmentier de pomme de terres</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Pigeonneau d'Ille-Vilaine</h3>
-                <p>Sur sont lit de gnocchis aux légumes</p>
+                <p class="menu__title§__§">
+                  Sur sont lit de gnocchis aux légumes
+                </p>
               </div>
               <div class="menu__price"><em>44€</em></div>
             </div>
@@ -92,21 +96,21 @@
             <div class="menu">
               <div class="menu__title§">
                 <h3>Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes</p>
+                <p class="menu__title§__§">Et purée de noisettes</p>
               </div>
               <div class="menu__price"><em>18€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Fondant au chocolat</h3>
-                <p>Revisité</p>
+                <p class="menu__title§__§">Revisité</p>
               </div>
               <div class="menu__price"><em>22€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
                 <h3>Millefeuille croustillant</h3>
-                <p>Myrtilles et pâte d'amande</p>
+                <p class="menu__title§__§">Myrtilles et pâte d'amande</p>
               </div>
               <div class="menu__price"><em>23€</em></div>
             </div>
@@ -114,6 +118,18 @@
           <div id="btn"><button>Commander</button></div>
         </section>
       </main>
+      <!--contact-->
+      <footer>
+        <h4>Ohmyfood</h4>
+        <p class="footer--bold">
+          <i class="fas fa-utensils"></i>Proposer un restaurant
+        </p>
+        <p class="footer--bold">
+          <i class="fas fa-hands-helping"></i>Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+      </footer>
     </div>
   </body>
 </html>
