Add Menus La palette du goût

--- a/index3.html
+++ b/index3.html
@@ -112,7 +112,7 @@
             </div>
           </article>
           <article>
-            <h2>DESSERT</h2>
+            <h2>DESSERTS</h2>
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
