--- a/index4.html
+++ b/index4.html
@@ -33,7 +33,7 @@
         <!--Menu-->
         <section>
           <div id="title__heart">
-            <h1>À la francaise</h1>
+            <h1>La palette du goût</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
@@ -41,22 +41,24 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Tartare de poulpe acidulé</h3>
-                <p>Aux zests d'orange</p>
+                <h3>Fricassée d'escargot</h3>
+                <p class="menu__title§__§">Au piment d'espelette</p>
               </div>
               <div class="menu__price"><em>25€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Velouté de légumes d'antan</h3>
-                <p>Carotte, panais, topinabour</p>
+                <h3>Foie gras de canard mi-cuit</h3>
+                <p class="menu__title§__§">Et ses copeaux de truffe noire</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Soupe à l'oignon</h3>
-                <p>Revisitée</p>
+                <h3>Oeuf au plat</h3>
+                <p class="menu__title§__§">
+                  Assaisonné à la truffe sur lit de...
+                </p>
               </div>
               <div class="menu__price"><em>20€</em></div>
             </div>
@@ -66,52 +68,60 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Coquilles Saint-Jacques</h3>
-                <p>Accompagnées d'une purée de panais</p>
+                <h3>Filet de boeuf aux herbes</h3>
+                <p class="menu__title§__§">
+                  Accompagnées de sa ribambelle de légu...
+                </p>
               </div>
               <div class="menu__price"><em>40€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Magret de canard</h3>
-                <p>Et parmentier de pomme de terres</p>
+                <h3>Parmentier de queue de boeuf</h3>
+                <p class="menu__title§__§">
+                  À la truffe noire sur sa purée de panais
+                </p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Pigeonneau d'Ille-Vilaine</h3>
-                <p>Sur sont lit de gnocchis aux légumes</p>
+                <h3>Filet de Turbot</h3>
+                <p class="menu__title§__§">Aux agrumes</p>
               </div>
               <div class="menu__price"><em>44€</em></div>
             </div>
           </article>
           <article>
-            <h2>DESSERT</h2>
+            <h2>DESSERTS</h2>
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes</p>
+                <h3>Paris-Brest</h3>
+                <p class="menu__title§__§">Revisité</p>
               </div>
               <div class="menu__price"><em>18€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Fondant au chocolat</h3>
-                <p>Revisité</p>
+                <h3>Macaron au chocolat d'exception</h3>
+                <p class="menu__title§__§">
+                  Et glace à la vanille de Madagascar
+                </p>
               </div>
               <div class="menu__price"><em>22€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Millefeuille croustillant</h3>
-                <p>Myrtilles et pâte d'amande</p>
+                <h3>Mousse au chocolat</h3>
+                <p class="menu__title§__§">
+                  Au piment d'espelette et à la truffe noire
+                </p>
               </div>
               <div class="menu__price"><em>23€</em></div>
             </div>
           </article>
-          <div id="btn"><button>Commander</button></div>
+          <div class="btn"><button>Commander</button></div>
         </section>
       </main>
       <!--contact-->
