Add Finie ensembles des maquettes version mobile
<768

--- a/index5.html
+++ b/index5.html
@@ -26,14 +26,14 @@
       <main>
         <div id="picture">
           <img
-            src="images/restaurants/toa-heftiba.jpg"
+            src="images/restaurants/louis-hansel.jpg"
             alt="vue de face une une assiette avec un plat"
           />
         </div>
         <!--Menu-->
         <section>
           <div id="title__heart">
-            <h1>À la francaise</h1>
+            <h1>le délice des sens</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
@@ -41,22 +41,22 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Tartare de poulpe acidulé</h3>
-                <p>Aux zests d'orange</p>
+                <h3>Tartare de thon</h3>
+                <p class="menu__title§__§">Assaisonné au yuzu</p>
               </div>
               <div class="menu__price"><em>25€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Velouté de légumes d'antan</h3>
-                <p>Carotte, panais, topinabour</p>
+                <h3>Bouchée de homard croustillant</h3>
+                <p class="menu__title§__§">Et sa farandole de petits légumes</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Soupe à l'oignon</h3>
-                <p>Revisitée</p>
+                <h3>Velouté de cèpes</h3>
+                <p class="menu__title§__§">Aux truffes</p>
               </div>
               <div class="menu__price"><em>20€</em></div>
             </div>
@@ -66,22 +66,22 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Coquilles Saint-Jacques</h3>
-                <p>Accompagnées d'une purée de panais</p>
+                <h3>Poulet rôti aux herbes de provence</h3>
+                <p class="menu__title§__§">Et sa crème de truffe</p>
               </div>
               <div class="menu__price"><em>40€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Magret de canard</h3>
-                <p>Et parmentier de pomme de terres</p>
+                <h3>Langouste rôtie</h3>
+                <p class="menu__title§__§">Et ses légumes de saison</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Pigeonneau d'Ille-Vilaine</h3>
-                <p>Sur sont lit de gnocchis aux légumes</p>
+                <h3>Côte de boeuf angus</h3>
+                <p class="menu__title§__§">Et sa purée de panais</p>
               </div>
               <div class="menu__price"><em>44€</em></div>
             </div>
@@ -91,27 +91,27 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes</p>
+                <h3>Farandole de desserts</h3>
+                <p class="menu__title§__§">du chef</p>
               </div>
               <div class="menu__price"><em>18€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Fondant au chocolat</h3>
-                <p>Revisité</p>
+                <h3>crème brulée</h3>
+                <p class="menu__title§__§">Revisitée</p>
               </div>
               <div class="menu__price"><em>22€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Millefeuille croustillant</h3>
-                <p>Myrtilles et pâte d'amande</p>
+                <h3>Tiramisu</h3>
+                <p class="menu__title§__§">À la noisette</p>
               </div>
               <div class="menu__price"><em>23€</em></div>
             </div>
           </article>
-          <div id="btn"><button>Commander</button></div>
+          <div class="btn"><button>Commander</button></div>
         </section>
       </main>
       <!--contact-->
