--- a/index2.html
+++ b/index2.html
@@ -17,9 +17,9 @@
     <div>
       <!--Header-->
       <header>
-        <button>
-          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </button>
+        <a href="index.html">
+          <button><i class="fas fa-arrow-left"></i></button
+        ></a>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
@@ -115,7 +115,7 @@
               <div class="menu__price"><em>23€</em></div>
             </div>
           </article>
-          <div id="btn"><button>Commander</button></div>
+          <div class="btn"><button>Commander</button></div>
         </section>
       </main>
       <!--contact-->
