Add modification bouton

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </div>
         </div>
         <!-- Filters -->
-        <section id="opération">
-          <h1 class="opération__heading">Fonctionnement</h1>
+        <section id="operation">
+          <h1 class="operation__heading">Fonctionnement</h1>
           <div class="Filters">
             <div class="Filters__numbers"><span>1</span></div>
             <i class="fas fa-mobile-alt"></i>
