--- a/index2.html
+++ b/index2.html
@@ -14,12 +14,12 @@
     <title>À la francaise</title>
   </head>
   <body>
-    <div>
+    <div id="file">
       <!--Header-->
       <header>
         <a href="index.html">
-          <button><i class="fas fa-arrow-left"></i></button
-        ></a>
+          <i class="fas fa-arrow-left"></i>
+        </a>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
