--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -2,38 +2,35 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style2.css" />
-    <link rel="stylesheet" href="style3.css" />
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="common_points.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/710925a4e7.js"
       crossorigin="anonymous"
     ></script>
-    <title>La palette du goût</title>
+    <title>À la francaise</title>
   </head>
   <body>
-    <div>
+    <div id="file">
       <!--Header-->
       <header>
-        <button>
-          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </button>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
       <main>
         <div id="picture">
           <img
-            src="images/restaurants/jay-wennington.jpg"
+            src="images/restaurants/toa-heftiba.jpg"
             alt="vue de face une une assiette avec un plat"
           />
         </div>
         <!--Menu-->
         <section>
           <div id="title__heart">
-            <h1>La palette du goût</h1>
+            <h1>À la francaise</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
@@ -41,24 +38,22 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Fricassée d'escargot</h3>
-                <p class="menu__title§__§">Au piment d'espelette</p>
+                <h3>Tartare de poulpe acidulé</h3>
+                <p class="menu__title§__§">Aux zests d'orange</p>
               </div>
               <div class="menu__price"><em>25€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p class="menu__title§__§">Et ses copeaux de truffe noire</p>
+                <h3>Velouté de légumes d'antan</h3>
+                <p class="menu__title§__§">Carotte, panais, topinabour</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Oeuf au plat</h3>
-                <p class="menu__title§__§">
-                  Assaisonné à la truffe sur lit de...
-                </p>
+                <h3>Soupe à l'oignon</h3>
+                <p class="menu__title§__§">Revisitée</p>
               </div>
               <div class="menu__price"><em>20€</em></div>
             </div>
@@ -68,26 +63,26 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Filet de boeuf aux herbes</h3>
+                <h3>Coquilles Saint-Jacques</h3>
                 <p class="menu__title§__§">
-                  Accompagnées de sa ribambelle de légu...
+                  Accompagnées d'une purée de panais
                 </p>
               </div>
               <div class="menu__price"><em>40€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p class="menu__title§__§">
-                  À la truffe noire sur sa purée de panais
-                </p>
+                <h3>Magret de canard</h3>
+                <p class="menu__title§__§">Et parmentier de pomme de terres</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Filet de Turbot</h3>
-                <p class="menu__title§__§">Aux agrumes</p>
+                <h3>Pigeonneau d'Ille-Vilaine</h3>
+                <p class="menu__title§__§">
+                  Sur sont lit de gnocchis aux légumes
+                </p>
               </div>
               <div class="menu__price"><em>44€</em></div>
             </div>
@@ -97,26 +92,22 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Paris-Brest</h3>
-                <p class="menu__title§__§">Revisité</p>
+                <h3>Pétales de violettes glacés</h3>
+                <p class="menu__title§__§">Et purée de noisettes</p>
               </div>
               <div class="menu__price"><em>18€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p class="menu__title§__§">
-                  Et glace à la vanille de Madagascar
-                </p>
+                <h3>Fondant au chocolat</h3>
+                <p class="menu__title§__§">Revisité</p>
               </div>
               <div class="menu__price"><em>22€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Mousse au chocolat</h3>
-                <p class="menu__title§__§">
-                  Au piment d'espelette et à la truffe noire
-                </p>
+                <h3>Millefeuille croustillant</h3>
+                <p class="menu__title§__§">Myrtilles et pâte d'amande</p>
               </div>
               <div class="menu__price"><em>23€</em></div>
             </div>
