--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style3.css" />
+    <link rel="stylesheet" href="common_points.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -61,7 +61,7 @@
         <section id="menu">
           <h1>Restaurants</h1>
           <article>
-            <a href="index4.html">
+            <a href="la_palette_du_gout.html">
               <img
                 src="images/restaurants/jay-wennington.jpg"
                 alt=" une assiette avec de la garniture et des mains à droite"
@@ -75,7 +75,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="index3.html">
+            <a href="la_note_enchantee.html">
               <img
                 src="images/restaurants/stil.jpg"
                 alt="une assiette au centre remplit de garniture"
@@ -89,7 +89,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="index2.html">
+            <a href="a_la_francaise.html">
               <img
                 src="images/restaurants/toa-heftiba.jpg"
                 alt="vue de face une une assiette avec un plat"
@@ -102,7 +102,7 @@
             <button><i class="far fa-heart"></i></button>
           </article>
           <article>
-            <a href="index5.html">
+            <a href="le_delice_des_sens.html">
               <img
                 src="images/restaurants/louis-hansel.jpg"
                 alt="vue de face une assiette avec un plat"
