--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -2,9 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style2.css" />
-    <link rel="stylesheet" href="style3.css" />
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="common_points.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -14,12 +13,10 @@
     <title>La note enchantée</title>
   </head>
   <body>
-    <div>
+    <div id="file">
       <!--Header-->
       <header>
-        <button>
-          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </button>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
