--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -2,38 +2,35 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style2.css" />
-    <link rel="stylesheet" href="style3.css" />
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="common_points.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/710925a4e7.js"
       crossorigin="anonymous"
     ></script>
-    <title>le délice des sens</title>
+    <title>La palette du goût</title>
   </head>
   <body>
-    <div>
+    <div id="file">
       <!--Header-->
       <header>
-        <button>
-          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </button>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
       <!--Picture-->
       <main>
         <div id="picture">
           <img
-            src="images/restaurants/louis-hansel.jpg"
+            src="images/restaurants/jay-wennington.jpg"
             alt="vue de face une une assiette avec un plat"
           />
         </div>
         <!--Menu-->
         <section>
           <div id="title__heart">
-            <h1>le délice des sens</h1>
+            <h1>La palette du goût</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
@@ -41,22 +38,24 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Tartare de thon</h3>
-                <p class="menu__title§__§">Assaisonné au yuzu</p>
+                <h3>Fricassée d'escargot</h3>
+                <p class="menu__title§__§">Au piment d'espelette</p>
               </div>
               <div class="menu__price"><em>25€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Bouchée de homard croustillant</h3>
-                <p class="menu__title§__§">Et sa farandole de petits légumes</p>
+                <h3>Foie gras de canard mi-cuit</h3>
+                <p class="menu__title§__§">Et ses copeaux de truffe noire</p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Velouté de cèpes</h3>
-                <p class="menu__title§__§">Aux truffes</p>
+                <h3>Oeuf au plat</h3>
+                <p class="menu__title§__§">
+                  Assaisonné à la truffe sur lit de...
+                </p>
               </div>
               <div class="menu__price"><em>20€</em></div>
             </div>
@@ -66,22 +65,26 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Poulet rôti aux herbes de provence</h3>
-                <p class="menu__title§__§">Et sa crème de truffe</p>
+                <h3>Filet de boeuf aux herbes</h3>
+                <p class="menu__title§__§">
+                  Accompagnées de sa ribambelle de légu...
+                </p>
               </div>
               <div class="menu__price"><em>40€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Langouste rôtie</h3>
-                <p class="menu__title§__§">Et ses légumes de saison</p>
+                <h3>Parmentier de queue de boeuf</h3>
+                <p class="menu__title§__§">
+                  À la truffe noire sur sa purée de panais
+                </p>
               </div>
               <div class="menu__price"><em>35€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Côte de boeuf angus</h3>
-                <p class="menu__title§__§">Et sa purée de panais</p>
+                <h3>Filet de Turbot</h3>
+                <p class="menu__title§__§">Aux agrumes</p>
               </div>
               <div class="menu__price"><em>44€</em></div>
             </div>
@@ -91,22 +94,26 @@
             <div class="lin--tertiary"></div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Farandole de desserts</h3>
-                <p class="menu__title§__§">du chef</p>
+                <h3>Paris-Brest</h3>
+                <p class="menu__title§__§">Revisité</p>
               </div>
               <div class="menu__price"><em>18€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>crème brulée</h3>
-                <p class="menu__title§__§">Revisitée</p>
+                <h3>Macaron au chocolat d'exception</h3>
+                <p class="menu__title§__§">
+                  Et glace à la vanille de Madagascar
+                </p>
               </div>
               <div class="menu__price"><em>22€</em></div>
             </div>
             <div class="menu">
               <div class="menu__title§">
-                <h3>Tiramisu</h3>
-                <p class="menu__title§__§">À la noisette</p>
+                <h3>Mousse au chocolat</h3>
+                <p class="menu__title§__§">
+                  Au piment d'espelette et à la truffe noire
+                </p>
               </div>
               <div class="menu__price"><em>23€</em></div>
             </div>
