Add Validateur W3C HTML et CSS

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -139,7 +139,7 @@
               <div class="menu__price"><em>23€</em></div>
             </div>
           </article>
-          <div class="btn" class="btn--height"><button>Commander</button></div>
+          <div class="btn"><button>Commander</button></div>
         </section>
       </main>
       <!--contact-->
