Add Tablette et Desktop Accueille

--- a/index.html
+++ b/index.html
@@ -39,82 +39,88 @@
           </div>
         </div>
         <!-- Filters -->
-        <section id="operation">
-          <h1 class="operation__heading">Fonctionnement</h1>
-          <div class="Filters">
-            <div class="Filters__numbers"><span>1</span></div>
-            <i class="fas fa-mobile-alt"></i>
-            <p>Choisissez un restaurant</p>
-          </div>
-          <div class="Filters">
-            <div class="Filters__numbers"><span>2</span></div>
-            <i class="fas fa-list-ul"></i>
-            <p>Composez votre menu</p>
-          </div>
-          <div class="Filters">
-            <div class="Filters__numbers"><span>3</span></div>
-            <i class="fas fa-store"></i>
-            <p>Dégustez au restaurant</p>
-          </div>
-        </section>
-        <!-- Menu -->
-        <section id="menu">
-          <h1>Restaurants</h1>
-          <article>
-            <a href="la_palette_du_gout.html">
-              <img
-                src="images/restaurants/jay-wennington.jpg"
-                alt=" une assiette avec de la garniture et des mains à droite"
-              />
-              <div class="menu--new">Nouveau</div>
-              <div class="title__§">
-                <h2>La palette du goût</h2>
-                <p>Ménilmontant</p>
+        <div id="together">
+          <section id="choice">
+            <h1 class="choice__heading">Fonctionnement</h1>
+            <div id="operation">
+              <div class="Filters">
+                <div class="Filters__numbers"><span>1</span></div>
+                <i class="fas fa-mobile-alt"></i>
+                <p>Choisissez un restaurant</p>
               </div>
-            </a>
-            <button><i class="far fa-heart"></i></button>
-          </article>
-          <article>
-            <a href="la_note_enchantee.html">
-              <img
-                src="images/restaurants/stil.jpg"
-                alt="une assiette au centre remplit de garniture"
-              />
-              <div class="menu--new">Nouveau</div>
-              <div class="title__§">
-                <h2>La note enchantée</h2>
-                <p>Charonne</p>
+              <div class="Filters">
+                <div class="Filters__numbers"><span>2</span></div>
+                <i class="fas fa-list-ul"></i>
+                <p>Composez votre menu</p>
               </div>
-            </a>
-            <button><i class="far fa-heart"></i></button>
-          </article>
-          <article>
-            <a href="a_la_francaise.html">
-              <img
-                src="images/restaurants/toa-heftiba.jpg"
-                alt="vue de face une une assiette avec un plat"
-              />
-              <div class="title__§">
-                <h2>À la française</h2>
-                <p>Cité Rouge</p>
+              <div class="Filters">
+                <div class="Filters__numbers"><span>3</span></div>
+                <i class="fas fa-store"></i>
+                <p>Dégustez au restaurant</p>
               </div>
-            </a>
-            <button><i class="far fa-heart"></i></button>
-          </article>
-          <article>
-            <a href="le_delice_des_sens.html">
-              <img
-                src="images/restaurants/louis-hansel.jpg"
-                alt="vue de face une assiette avec un plat"
-              />
-              <div class="title__§">
-                <h2>Le délice des sens</h2>
-                <p>Folie-Méricourt</p>
-              </div>
-            </a>
-            <button><i class="far fa-heart"></i></button>
-          </article>
-        </section>
+            </div>
+          </section>
+          <!-- Menu -->
+          <section id="restaurant">
+            <h1>Restaurants</h1>
+            <div id="menu">
+              <article>
+                <a href="la_palette_du_gout.html">
+                  <img
+                    src="images/restaurants/jay-wennington.jpg"
+                    alt=" une assiette avec de la garniture et des mains à droite"
+                  />
+                  <div class="menu--new">Nouveau</div>
+                  <div class="title__§">
+                    <h2>La palette du goût</h2>
+                    <p>Ménilmontant</p>
+                  </div>
+                </a>
+                <button><i class="far fa-heart"></i></button>
+              </article>
+              <article>
+                <a href="la_note_enchantee.html">
+                  <img
+                    src="images/restaurants/stil.jpg"
+                    alt="une assiette au centre remplit de garniture"
+                  />
+                  <div class="menu--new">Nouveau</div>
+                  <div class="title__§">
+                    <h2>La note enchantée</h2>
+                    <p>Charonne</p>
+                  </div>
+                </a>
+                <button><i class="far fa-heart"></i></button>
+              </article>
+              <article>
+                <a href="a_la_francaise.html">
+                  <img
+                    src="images/restaurants/toa-heftiba.jpg"
+                    alt="vue de face une une assiette avec un plat"
+                  />
+                  <div class="title__§">
+                    <h2>À la française</h2>
+                    <p>Cité Rouge</p>
+                  </div>
+                </a>
+                <button><i class="far fa-heart"></i></button>
+              </article>
+              <article>
+                <a href="le_delice_des_sens.html">
+                  <img
+                    src="images/restaurants/louis-hansel.jpg"
+                    alt="vue de face une assiette avec un plat"
+                  />
+                  <div class="title__§">
+                    <h2>Le délice des sens</h2>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                </a>
+                <button><i class="far fa-heart"></i></button>
+              </article>
+            </div>
+          </section>
+        </div>
       </main>
       <!--contact-->
       <footer>
