Add version Tablette et Desktop

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -136,7 +136,7 @@
       <!--contact-->
       <footer>
         <h4>Ohmyfood</h4>
-        <div id="contact">
+        <div class="contact">
           <p class="contact--bold">
             <i class="fas fa-utensils"></i>Proposer un restaurant
           </p>
