--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
       <!--contact-->
       <footer>
         <h3>Ohmyfood</h3>
-        <p class="footer--bold">
-          <i class="fas fa-utensils"></i>Proposer un restaurant
-        </p>
-        <p class="footer--bold">
-          <i class="fas fa-hands-helping"></i>Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        <div class="contact">
+          <p class="footer--bold">
+            <i class="fas fa-utensils"></i>Proposer un restaurant
+          </p>
+          <p class="footer--bold">
+            <i class="fas fa-hands-helping"></i>Devenir partenaire
+          </p>
+          <p>Mentions légales</p>
+          <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        </div>
       </footer>
     </div>
   </body>
