--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -29,7 +29,7 @@
         </div>
         <!--Menu-->
         <section>
-          <div id="title__heart">
+          <div class="title__heart">
             <h1>À la francaise</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
@@ -118,14 +118,16 @@
       <!--contact-->
       <footer>
         <h4>Ohmyfood</h4>
-        <p class="footer--bold">
-          <i class="fas fa-utensils"></i>Proposer un restaurant
-        </p>
-        <p class="footer--bold">
-          <i class="fas fa-hands-helping"></i>Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        <div class="contact">
+          <p class="footer--bold">
+            <i class="fas fa-utensils"></i>Proposer un restaurant
+          </p>
+          <p class="footer--bold">
+            <i class="fas fa-hands-helping"></i>Devenir partenaire
+          </p>
+          <p>Mentions légales</p>
+          <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        </div>
       </footer>
     </div>
   </body>
