--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -29,9 +29,9 @@
         </div>
         <!--Menu-->
         <section>
-          <div id="title__heart">
-            <h1 class="title--size">La note enchantée</h1>
-            <button class="heart--size"><i class="far fa-heart"></i></button>
+          <div class="title__heart">
+            <h1>La note enchantée</h1>
+            <button><i class="far fa-heart"></i></button>
           </div>
           <article class="article--size">
             <h2>ENTRÉES</h2>
@@ -145,14 +145,16 @@
       <!--contact-->
       <footer>
         <h4>Ohmyfood</h4>
-        <p class="footer--bold">
-          <i class="fas fa-utensils"></i>Proposer un restaurant
-        </p>
-        <p class="footer--bold">
-          <i class="fas fa-hands-helping"></i>Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        <div class="contact">
+          <p class="footer--bold">
+            <i class="fas fa-utensils"></i>Proposer un restaurant
+          </p>
+          <p class="footer--bold">
+            <i class="fas fa-hands-helping"></i>Devenir partenaire
+          </p>
+          <p>Mentions légales</p>
+          <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        </div>
       </footer>
     </div>
   </body>
