--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -29,7 +29,7 @@
         </div>
         <!--Menu-->
         <section>
-          <div id="title__heart">
+          <div class="title__heart">
             <h1>La palette du goût</h1>
             <button><i class="far fa-heart"></i></button>
           </div>
