Add Animation loading spinner

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                     <p>Ménilmontant</p>
                   </div>
                 </a>
-                <button><i class="far fa-heart"></i></button>
+                <button>
+                  <i class="far fa-heart"></i>
+                </button>
               </article>
               <article>
                 <a href="la_note_enchantee.html">
@@ -90,7 +92,9 @@
                     <p>Charonne</p>
                   </div>
                 </a>
-                <button><i class="far fa-heart"></i></button>
+                <button>
+                  <i class="far fa-heart"></i>
+                </button>
               </article>
               <article>
                 <a href="a_la_francaise.html">
@@ -103,7 +107,9 @@
                     <p>Cité Rouge</p>
                   </div>
                 </a>
-                <button><i class="far fa-heart"></i></button>
+                <button>
+                  <i class="far fa-heart"></i>
+                </button>
               </article>
               <article>
                 <a href="le_delice_des_sens.html">
@@ -116,7 +122,9 @@
                     <p>Folie-Méricourt</p>
                   </div>
                 </a>
-                <button><i class="far fa-heart"></i></button>
+                <button>
+                  <i class="far fa-heart"></i>
+                </button>
               </article>
             </div>
           </section>
