Add Loader mise en forme

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
   </head>
   <body>
     <div id="file">
+      <section id="loading-spinner">
+        <div class="loading-spinner__loader">
+          <span class="letters">O</span>
+          <span class="letters">H</span>
+          <span class="letters">M</span>
+          <span class="letters">Y</span>
+          <span class="letters">F</span>
+          <span class="letters">O</span>
+          <span class="letters">O</span>
+          <span class="letters">D</span>
+        </div>
+        <p class="loader loading-spinner__loader-quart">Chargement...</p>
+      </section>
       <header>
         <img src="images/logo/ohmyfood.png" alt="logo_Omyfood" />
       </header>
