--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
+                  <i class="fas fa-heart filled-heart"></i>
                 </button>
               </article>
               <article>
@@ -107,6 +108,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
+                  <i class="fas fa-heart"></i>
                 </button>
               </article>
               <article>
@@ -122,6 +124,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
+                  <i class="fas fa-heart"></i>
                 </button>
               </article>
               <article>
@@ -137,6 +140,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
+                  <i class="fas fa-heart"></i>
                 </button>
               </article>
             </div>
